--- a/config/server.conf
+++ b/config/server.conf
@@ -12,22 +12,11 @@ server {
 }
 
 server {
-	listen       443 ssl http2;
-	# access_log   /var/log/nginx/wtrb.access.log  main;
-	
-	ssl_certificate /app/certs/cert.pem;
-	ssl_certificate_key /app/certs/key.pem;
-	
-	location ~* ^/(api|file) {
-		proxy_pass      http://127.0.0.1:9001;
-	}
+	listen       50051 http2;
+	# access_log   /var/log/nginx/grpc.access.log  main;
 	
 	location ~* ^/(heartbeat|command) {
-		grpc_pass		grpc://127.0.0.1:9002;
-	}
-	
-	location / {
-		proxy_pass      http://127.0.0.1:9000;
+		grpc_pass	grpc://127.0.0.1:9002;
 	}
 }
 
